Update beta instructions, and site footer (#544, #488)
* Fixing issue #544
* Fixing issue #488: Remove "now" from footer?

--- a/website/download/beta/index.html
+++ b/website/download/beta/index.html
@@ -144,7 +144,7 @@
         <li>{{ _('Ask beta specific assistance questions and comments in <a href="https://thunderbird.topicbox.com/groups/beta">the beta forum</a>, or browse it to see what other beta users are discussing. The forum operates in English, so if you need assistance in another language please ask for help in <a href="https://support.mozilla.org/questions/new/thunderbird/form">Thunderbird support</a>.') }}</li>
         <li>{{ _('If you find a problem, try to <a href="https://support.mozilla.org/kb/troubleshoot-mode-thunderbird">reproduce the problem in Troubleshoot Mode</a>, then file a bug report for <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">Thunderbird</a> or <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Calendar">Calendar</a>.') }}</li>
         <li>{{ _('<b>≡ > Tools > Export</b> can be used to backup your profile, or to get to your profile directory quickly.') }}</li>
-        <li>{{ _('<b>≡ > Go > Mail Start Page (aka Beta Start Page)</b> is a handy reference which documents several of the above items and more.') }}</li>
+        <li>{{ _('<b> Invoke the Mail Start Page (aka Beta Start Page)</b> with the shortcut listed <a href="https://support.mozilla.org/kb/keyboard-shortcuts-thunderbird#w_moving-around-thunderbird">here</a> to open a handy reference that documents several of the above items and more.') }}</li>
       </ul>
     </aside>
   </section>
