Correct alt text for the YouTube social media link.

--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li class="m-1">
-          <a class="social-link-large font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
+          <a class="social-link-large font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@ThunderbirdProject') }}"
             href="{{ url('thunderbird.social.youtube') }}" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
             <span>{{ svg('youtube') }}</span>
             {{ _('Thunderbird') }}
