--- a/website/index.html
+++ b/website/index.html
@@ -399,7 +399,7 @@ with great features!') }}{% endblock %}
             data-link-name="Facebook (Thunderbird)">
           {{ svg('social-icon-facebook') }}
         </a>
-        <a class="icon" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
+        <a class="icon" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@ThunderbirdProject') }}"
             href="{{ url('thunderbird.social.youtube') }}" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
           {{ svg('social-icon-youtube') }}
         </a>
