Rename new to base, and clean up some extremely old blocks/javascript includes.

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
 {% set active_page = "index" %}
-{% extends "includes/new/page.html" %}
+{% extends "includes/base/page.html" %}
 
 {% block page_title_prefix %}{{_('Thunderbird')}} — {% endblock %}
 {% block page_title %}{{ _('Free Your Inbox.') }}{% endblock %}
