--- a/sites/www.thunderbird.net/who-we-are.html
+++ b/sites/www.thunderbird.net/who-we-are.html
@@ -6,8 +6,8 @@
 {% extends "includes/base/page.html" %}
 
 {% block page_title %}{{ _('Who We Are') }}{% endblock %}
-{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded
-with great features!') }}{% endblock %}
+{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
+{% block category %}{{ _('About') }}{% endblock %}
 
 {% block content %}
 <section>
@@ -40,37 +40,37 @@ with great features!') }}{% endblock %}
     </div>
     <div class="value-section values-privacy">
       <div class="image">
-      {{ high_res_img('thunderbird/base/about/privacy.png', {'alt': _('Privacy')}) }}
+      {{ high_res_img('thunderbird/base/about/privacy.png', {'alt': _('A shield with the Thunderbird logo.')}) }}
       </div>
-      <div class="section-text">
+      <div class="section-text tight">
         <h2>Privacy</h2>
         <h3>You are not the product.</h3>
         <p>Software makers commonly collect more personal data than necessary and leverage it for profit. Laws regulate this practice in some regions. To us, data ownership and privacy are your right wherever you live. Our commitment to your personal data is simple:</p>
-        <ul>
+        <ul class="styled-list">
           <li>We do not collect or store it unless you ask us to.</li>
           <li>We take great care to keep it safe from misuse.</li>
           <li>We will never sell it.</li>
           <li>You retain ownership and control of it.</li>
         </ul>
-        <a href="#">Read the Privacy Policy</a>
+        <a href="{{ url('privacy') }}">Read the Privacy Policy</a>
       </div>
     </div>
     <div class="value-section values-freedom">
       <div class="image">
-      {{ high_res_img('thunderbird/base/about/freedom.png', {'alt': _('Freedom')}) }}
+      {{ high_res_img('thunderbird/base/about/freedom.png', {'alt': _('A key with the Thunderbird logo.')}) }}
       </div>
-      <div class="section-text">
+      <div class="section-text tight">
         <h2>Freedom</h2>
         <h3>Thunderbird belongs to you (and the world).</h3>
         <p>Thunderbird is Free and Open-Source Software, which means its code is available to see, modify, use, and share freely. Its license also ensures that it will remain free forever. You can think of Thunderbird as a gift from thousands of contributors to you.</p>
-        <a href="#">Learn About MPL 2.0 ></a>
+        <a href="{{ url('mozorg.mpl2') }}">Learn About MPL 2.0</a>
       </div>
     </div>
     <div class="value-section values-voice">
       <div class="image">
-      {{ high_res_img('thunderbird/base/about/freedom.png', {'alt': _('Voice')}) }}
+      {{ high_res_img('thunderbird/base/about/freedom.png', {'alt': _('A speech bubble with the Thunderbird logo.')}) }}
       </div>
-      <div class="section-text">
+      <div class="section-text tight">
         <h2>Voice</h2>
         <h3>You have a part in Thunderbird's future.</h3>
         <p>Thunderbird is free from the commercial requirements and incentives that often guide software development. Anyone can get involved in helping make Thunderbird better and available to more people. A contributor-elected council ensures Thunderbird remains true to its values and mission.</p>
