--- a/sites/www.thunderbird.net/who-we-are.html
+++ b/sites/www.thunderbird.net/who-we-are.html
@@ -102,21 +102,21 @@
     </div>
     <div>
       <div class="job-grid">
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
-        {{ job_block('Person McPersonface', 'Sr Meower', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
+        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', 'https://placekitten.com/128/128') }}
       </div>
     </div>
       <div class="section-text">
