Who We Are: Copy update and mobile fixes

--- a/sites/www.thunderbird.net/who-we-are.html
+++ b/sites/www.thunderbird.net/who-we-are.html
@@ -14,20 +14,22 @@
   <div class="container">
     <div class="section-text">
       <h1>Meet <span class="txt-gradient">Thunderbird</span></h1>
-      <p>Thunderbird is a Mozilla-backed community project creating free and open-source software to make organizing and emailing easier. It is available because of the contributions of thousands of individuals and organizations since 2003. Email remains among the most accessible and universal ways for people to communicate across the world, but how and where people use email is changing. Thunderbird is changing, too. Learn what values, community, and organization guide that change and ensure you remain connected, productive, and free.</p>
+      <p>{{ _('Thunderbird is a free and open-source software project founded in 2003 to make organizing and communicating easier. We are supported by the talent and donations of thousands of generous individuals and are backed by Mozilla. Essential values guide us and make our work relevant. Read further to learn more.') }}</p>
     </div>
-    <div class="icon-grid">
-      <div class="icon-item">
-        {{ svg('base/icons/about/values') }}
-        <p>Values</p>
-      </div>
-      <div class="icon-item">
-        {{ svg('base/icons/about/community') }}
-        <p>Community</p>
-      </div>
-      <div class="icon-item">
-        {{ svg('base/icons/about/organization') }}
-        <p>Organization</p>
+    <div class="icon-grid-container">
+      <div class="icon-grid">
+        <div class="icon-item">
+          {{ svg('base/icons/about/values') }}
+          <p>Values</p>
+        </div>
+        <div class="icon-item">
+          {{ svg('base/icons/about/community') }}
+          <p>Community</p>
+        </div>
+        <div class="icon-item">
+          {{ svg('base/icons/about/organization') }}
+          <p>Organization</p>
+        </div>
       </div>
     </div>
   </div>
@@ -45,7 +47,7 @@
       <div class="section-text tight">
         <h2>Privacy</h2>
         <h3>You are not the product.</h3>
-        <p>Software makers commonly collect more personal data than necessary and leverage it for profit. Laws regulate this practice in some regions. To us, data ownership and privacy are your right wherever you live. Our commitment to your personal data is simple:</p>
+        <p>To us, data ownership and privacy are your right wherever you live. Our commitment to <strong>your personal data</strong> is simple:</p>
         <ul class="styled-list">
           <li>We do not collect or store it unless you ask us to.</li>
           <li>We take great care to keep it safe from misuse.</li>
@@ -97,8 +99,8 @@
   <div class="container">
     <div class="section-text">
       <h1>Supported by <span class="txt-gradient">Mozilla</span></h1>
-      <p>Mozilla is the original creator of Thunderbird and its sister application, Firefox. Thunderbird operates under a for-profit, wholly-owned subsidiary of the non-profit Mozilla Foundation. This organization grants us flexibility in hiring staff and offering optional paid services to sustain Thunderbird's development. Our backing by one of the most trusted organizations in the world, our commitment to providing freely licensed software, and our focus on fiscal stability are reasons you can rely upon Thunderbird now and far into the future.</p>
-      <p>A growing team of talented individuals are employed to support the efforts of our contributor community, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.</p>
+      <p>Thunderbird operates as a for-profit subsidiary of the non-profit Mozilla Foundation. This grants us flexibility in hiring and offering optional paid services to sustain Thunderbird's development of free and open-source software far into the future.</p>
+      <p>We have a growing team of talented individuals employed to support the efforts of our contributor community, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.</p>
     </div>
     <div>
       <div class="job-grid">
