General: Link styling

--- a/sites/www.thunderbird.net/who-we-are.html
+++ b/sites/www.thunderbird.net/who-we-are.html
@@ -54,7 +54,7 @@
           <li>We will never sell it.</li>
           <li>You retain ownership and control of it.</li>
         </ul>
-        <a href="{{ url('privacy') }}">Read the Privacy Policy</a>
+        <a class="strong" href="{{ url('privacy') }}">Read the Privacy Policy</a>
       </div>
     </div>
     <div class="value-section values-freedom">
@@ -65,7 +65,7 @@
         <h2>Freedom</h2>
         <h3>Thunderbird belongs to you (and the world).</h3>
         <p>Thunderbird is Free and Open-Source Software, which means its code is available to see, modify, use, and share freely. Its license also ensures that it will remain free forever. You can think of Thunderbird as a gift from thousands of contributors to you.</p>
-        <a href="{{ url('mozorg.mpl2') }}">Learn About MPL 2.0</a>
+        <a class="strong" href="{{ url('mozorg.mpl2') }}">Learn About MPL 2.0</a>
       </div>
     </div>
     <div class="value-section values-voice">
@@ -87,7 +87,7 @@
     <div class="section-text">
       <h1>Driven by <span class="txt-gradient">Community</span></h1>
       <p>Anyone can help make Thunderbird better. Programmers can contribute features they are passionate about or improve the existing code. Those who are multilingual can make Thunderbird accessible to everyone. Those willing can test new versions of Thunderbird and document issues. There are many ways to become part of a thriving community that makes Thunderbird unique. And if you don't have the time to volunteer, you can help support the project through donations.</p>
-      <a href="#">Learn How to Get Involved ></a>
+      <a class="strong" href="#">Learn How to Get Involved</a>
     </div>
   </div>
 </section>
@@ -122,7 +122,7 @@
       </div>
     </div>
       <div class="section-text">
-        <a href="#">Explore Career Opportunities ></a>
+        <a class="strong" href="#">Explore Career Opportunities</a>
       </div>
   </div>
   </div>
