--- a/sites/www.thunderbird.net/about/contact-us.html
+++ b/sites/www.thunderbird.net/about/contact-us.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="section-text">
       <h1>Need to <span class="txt-gradient">Talk?</span></h1>
-      <p>{{ _('Direct your inquiries to the people below.') }}</p>
+      <h3>{{ _('Direct your inquiries to the people below.') }}</h3>
     </div>
     <div class="block-grid">
       {% call contact_block( svg('base/icons/contact/support'), _('Support'), [(url('support'), _('Support Website'))]) %}
@@ -23,7 +23,7 @@
       {% call contact_block( svg('base/icons/contact/security'), _('Security'), [(url('thunderbird.bugzilla.new-bug'), _('Bugzilla'))]) %}
         {{ _('To report a software vulnerability, please submit an issue on Bugzilla with the security box checked. This checkmark will make the report visible only to our security team, who can address vulnerabilities before public disclosure.') }}
       {% endcall %}
-      {% call contact_block( svg('base/icons/contact/media'), _('Security'), [('mailto:outreach@thunderbird.net', _('Outreach Team'))]) %}
+      {% call contact_block( svg('base/icons/contact/media'), _('Media'), [('mailto:outreach@thunderbird.net', _('Outreach Team'))]) %}
         {{ _('Thunderbird and the people who make it are amazing. Obtain access to our team for your story, review, or other content by emailing our Outreach Team.') }}
       {% endcall %}
       {% call contact_block( svg('base/icons/contact/business'), _('Business'), [('mailto:business@thunderbird.net', _('Business Team'))]) %}
