--- a/sites/www.thunderbird.net/contribute/donations.html
+++ b/sites/www.thunderbird.net/contribute/donations.html
@@ -11,16 +11,16 @@
 
 {% block content %}
 <section>
-  <div class="container double-paned">
-    <div class="section-text">
-      <h1>Become a <span class="txt-gradient">Supporter</span></h1>
-      <h3>Help us make Thunderbird better.</h3>
+  <div class="container two-columns">
+    <div class="section-text tight">
+      <h1>{{ _('Become a <span class="txt-gradient">Supporter</span>') }}</h1>
+      <h3>{{ _('Help us make Thunderbird better.') }}</h3>
       <p>{{ _('MZLA Corporation is the for-profit organization sustaining the free software mission of Thunderbird. Our work is to provide open source apps that are secure, private and free for users around the world. When you donate you help us:') }}</p>
       <ul class="styled-list">
-        <li>Develop new apps, integrations and features</li>
-        <li>Improve the interface, speed, and stability</li>
-        <li>Promote Thunderbird and software freedom</li>
-        <li>Serve millions of free app downloads each year</li>
+        <li>{{ _('Develop new apps, integrations and features') }}</li>
+        <li>{{ _('Improve the interface, speed, and stability') }}</li>
+        <li>{{ _('Promote Thunderbird and software freedom') }}</li>
+        <li>{{ _('Serve millions of free app downloads each year') }}</li>
       </ul>
       <ul class="card-list">
         <li>{{ svg('base/icons/donate/payment-credit') }}</li>
@@ -32,6 +32,7 @@
       </ul>
     </div>
     <div class="section-text donation-panel">
+      <!-- TODO: Replace with the actual element, this is just a clone. -->
       <a href="#XVBPRKMH" style="display: none"></a>
       <p><a class="dotted" href="{{ url('thunderbird.donate.modify') }}">Modify</a> an existing monthly donation.</p>
     </div>
@@ -41,7 +42,7 @@
 <section>
   <div class="container">
     <div class="section-text">
-      <h1>Become a <span class="txt-gradient">Corporate Sponsor</span></h1>
+      <h1>{{ _('Become a <span class="txt-gradient">Corporate Sponsor</span>') }}</h1>
       <h3>{{ _('Secure an open future for yourself and the world.') }}</h3>
       <p>{{ _('Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate sponsor. Small to medium size contributions can be made with the form above. For donations greater than $5000 USD please contact our business team. Thank you in advance for your generous support!') }}</p>
     </div>
@@ -57,11 +58,9 @@
 <section>
   <div class="container">
     <div class="section-text">
-      <h1>Frequently Asked Questions</h1>
+      <h1>{{ _('Frequently Asked Questions') }}</h1>
 
       {% include 'includes/faq.html' %}
-
-
     </div>
   </div>
 </section>
