--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -79,37 +79,41 @@
       <p>{{ _('Volunteers create Thunderbird and ensure it is accessible throughout the world in dozens of languages. They write the documentation and answer the questions that help regular people use Thunderbird. They come from diverse backgrounds and bring unique talents. They\'re making Thunderbird better for themselves and better for the world at the same time. You can join them.') }}</p>
     </div>
   </div>
-  <div class="testimonials">
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
-    {% call testimonial_card('<img src="https://placekitten.com/64/64" alt="Mr Meows"/>', 'Mr Meow', 'Sr Meow-Stack Engineer, Canada') %}
-    Meow meow meow meow...
-    {% endcall %}
+  <div class="container">
+    <div class="testimonials">
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
+      Meow meow meow meow...
+      {% endcall %}
+    </div>
   </div>
 </section>
 {% include 'includes/components/page-separator.html' %}
 <section>
-  <div class="two-columns">
-    <div class="section-text tight">
-      <h2>{{ _('Shape the <span class="txt-gradient">Future</span>') }}</h2>
-      <h3>{{ _('Improve software and lives by volunteering.') }}</h3>
-      <p>{{ _('Craft tools you want to use. Help others find and use software that respects their privacy and freedom. Become part of a better future for yourself and others by putting your talents to work at Thunderbird. Read further to learn how.') }}</p>
-    </div>
-    <div class="image">
-      {{ high_res_img('thunderbird/base/participate/gears.png', {'alt': _('Various gears all working in tandem with a heart, a code symbol, a magnifying glass displaying a very small bug, and the Thunderbird Logo in the centre of it all.')}) }}
+  <div class="container">
+    <div class="two-columns">
+      <div class="section-text tight">
+        <h2>{{ _('Shape the <span class="txt-gradient">Future</span>') }}</h2>
+        <h3>{{ _('Improve software and lives by volunteering.') }}</h3>
+        <p>{{ _('Craft tools you want to use. Help others find and use software that respects their privacy and freedom. Become part of a better future for yourself and others by putting your talents to work at Thunderbird. Read further to learn how.') }}</p>
+      </div>
+      <div class="image">
+        {{ high_res_img('thunderbird/base/participate/gears.png', {'alt': _('Various gears all working in tandem with a heart, a code symbol, a magnifying glass displaying a very small bug, and the Thunderbird Logo in the centre of it all.')}) }}
+      </div>
     </div>
   </div>
 </section>
