Homepage: Hide the already hard to spot breadcrumbs.

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -10,6 +10,8 @@
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded
 with great features!') }}{% endblock %}
 
+{% block breadcrumbs %}{% endblock %}
+
 {% block header_content %}
   <section>
     <div class="container hero">
