Download: Commit some css crimes for a no-js download link selector: * Uses :has to determine which locale download to display. * Has fallback to display current locale's download link if browser does not support :has.

--- a/sites/www.thunderbird.net/download/index.html
+++ b/sites/www.thunderbird.net/download/index.html
@@ -20,7 +20,18 @@
           </div>
           <p>{{ _('These are officially maintained and distributed by Thunderbird Desktop. Download the latest release unless you wish to test the beta version and report bugs.') }}</p>
         </div>
-
+        <div class="section-text">
+          <label class="pretend-to-be-h6" for="download-language-select">
+            <strong>{{ _('Localized Direct Downloads') }}</strong>
+          </label>
+          <select id="download-language-select" name="lang" dir="ltr" class="form-select">
+            {% for code, label in translations|dictsort -%}
+              {# Don't escape the label as it may include entity references
+               # like "Português (do&nbsp;Brasil)" (Bug 861149) #}
+              <option lang="{{ code }}" value="{{ code }}" {{ 'selected' if code==LANG else '' }}>{{ label|safe|replace('English (US)', 'English') }}</option>
+            {% endfor %}
+          </select>
+        </div>
         {% for os, platforms in get_platforms().items() %}
         <div class="platform-release">
           <div class="platform-icon">
@@ -38,9 +49,10 @@
                 {% set platform = platform_tuple[0] %}
                 {% set platform_name = platform_tuple[1] %}
                 <li>
-                  <a class="dotted" href="{{ download_url(platform_os=platform, channel=channel) }}">{{ _(platform_name) }}</a>
+                  {% for code, label in translations|dictsort -%}
+                    <a class="dotted lang-link" lang="{{ code }}" href="{{ download_url(platform_os=platform, channel=channel, locale=code) }}">{{ _(platform_name) }}</a>
+                  {% endfor %}
                 </li>
-                {% if not loop.last %}<li>|</li>{% endif %}
                 {% endfor %}
               </ul>
             </div>
@@ -55,20 +67,22 @@
               <li>
                 <a class="dotted" href="https://apps.microsoft.com/detail/9pm5vm1s3vmq">{{ _('Microsoft Apps Store') }}</a>
               </li>
-              <li>|</li>
-              <li><a class="dotted" href="https://flathub.org/apps/org.mozilla.Thunderbird">{{ _('Flathub') }}</a></li>
+              <li>
+                <a class="dotted" href="https://flathub.org/apps/org.mozilla.Thunderbird">{{ _('Flathub') }}</a>
+              </li>
             </ul>
           </div>
         </div>
         <div class="platform-release">
           <div>
-            <strong>More Information</strong>
+            <h4>{{ _('More Information') }}</h4>
             <ul>
               <li>
                 <a class="dotted" href="https://docs.k9mail.app/en/6.400/setup/installation/">{{ _('System Requirements') }}</a>
               </li>
-              <li>|</li>
-              <li><a class="dotted" href="https://github.com/thunderbird/thunderbird-android/releases">{{ _('Release Notes') }}</a></li>
+              <li>
+                <a class="dotted" href="https://github.com/thunderbird/thunderbird-android/releases">{{ _('Release Notes') }}</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -94,9 +108,9 @@
               <li>
                 <a class="dotted" href="https://play.google.com/store/apps/details?id=com.fsck.k9">{{ _('Google Play Store') }}</a>
               </li>
-              <li>|</li>
-              <li><a class="dotted" href="https://f-droid.org/packages/com.fsck.k9/">{{ _('F-Droid') }}</a></li>
-              <li>|</li>
+              <li>
+                <a class="dotted" href="https://f-droid.org/packages/com.fsck.k9/">{{ _('F-Droid') }}</a>
+              </li>
               <li>
                 <a class="dotted" href="https://github.com/thunderbird/thunderbird-android/releases">{{ _('Binary (.apk)') }}</a>
               </li>
@@ -105,13 +119,14 @@
         </div>
         <div class="platform-release">
           <div>
-            <strong>More Information</strong>
+            <h4>{{ _('More Information') }}</h4>
             <ul>
               <li>
                 <a class="dotted" href="https://github.com/thunderbird/thunderbird-android/wiki/ReleaseNotes#minimum-android-version-compatibility">{{ _('System Requirements') }}</a>
               </li>
-              <li>|</li>
-              <li><a class="dotted" href="https://github.com/thunderbird/thunderbird-android/wiki/ReleaseNotes#change-logs">{{ _('Release Notes') }}</a></li>
+              <li>
+                <a class="dotted" href="https://github.com/thunderbird/thunderbird-android/wiki/ReleaseNotes#change-logs">{{ _('Release Notes') }}</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -119,4 +134,26 @@
     </div>
   </div>
 </section>
+<style>
+  /* Fallback for no :has support - Only display the current locale's download. */
+  .lang-link {
+    display: none;
+  }
+  .lang-link[lang='{{ LANG }}'] {
+    display: inline-block;
+  }
+  /*
+  Maybe being too smart here to avoid having to create a no-js download page...
+  We use has for the display:none so browsers without has support will still display the current page's download links.
+  */
+  {% for code, label in translations|dictsort -%}
+    li:has(.lang-link[lang='{{ code }}']) > a {
+      display: none;
+    }
+    .section-text:has(#download-language-select > option[value='{{ code }}']:checked) ~ .platform-release .lang-link[lang='{{ code }}'] {
+      display: inline-block;
+    }
+  {% endfor %}
+
+</style>
 {% endblock %}
